# appcentral

./: AppCentral.JNI.pas  AppCentral.cs  AppCentral.h  AppCentral.java  AppCentral.pas  AppCentral.ps1  AppCentralProjects.groupproj  HOWTO.md  LICENSE.md  README.de.md  README.md  app_central.py
AppCentralRust/: Cargo.toml
AppCentralRust/src/: lib.rs
Docs/: Architecture.de.md  Architecture.md  CSharp.de.md  CSharp.md  Cpp.de.md  Cpp.md  Delphi.de.md  Delphi.md  FSharp.de.md  FSharp.md  FreePascal.de.md  FreePascal.md  Java.de.md  Java.md  PowerShell.de.md  PowerShell.md  Python.de.md  Python.md  Rust.de.md  Rust.md  VBNet.de.md  VBNet.md
Examples/: Interfaces.cs  Interfaces.h  Interfaces.pas
Examples/CSharpDLL/: ExampleCSharpDLL.csproj  Exports.cs  ManualVtable.cs
Examples/CSharpDLLAuto/: ExampleCSharpDLLAuto.csproj  Exports.cs  Interfaces.cs
Examples/CSharpHost/: CSharpHost.csproj  Program.cs
Examples/CppDLL/: ExampleCppDLL.cpp
Examples/CppHost/: main.cpp
Examples/DelphiDLL/: ExampleDelphiDLL.Impl.pas  ExampleDelphiDLL.dpr  ExampleDelphiDLL.dproj  ExampleDelphiDLL.res
Examples/DelphiHost/: DelphiHost.dpr  DelphiHost.dproj
Examples/DelphiJavaHost/: DelphiJavaHost.dpr  JavaExampleAdapter.pas
Examples/RustHost/: Cargo.toml
Examples/RustHost/src/: main.rs
demo/: AppCentralClientDLLDemo.dpr  AppCentralClientDLLDemo.dproj  AppCentralClientDLLUnit.pas  AppCentralDemoDialogs.pas  AppCentralHostDemo.dpr  AppCentralHostDemo.dproj  AppCentralHostDemoMain.dfm  AppCentralHostDemoMain.pas
source/: AppCentral.cs  AppCentral.pas  AppCentralDemoInterfaces.pas
(+24 files in other folders)
