[package]
name = "appcentral"
version = "0.1.0"
edition = "2021"
description = "AppCentral cross-language interface exchange (Rust library)"

[lib]
name = "appcentral"
path = "src/lib.rs"

[dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_LibraryLoader",
] }
windows-core = "0.59"
